--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,15 @@
 steps:
   - name: node
     entrypoint: npm
+    args: ['-v']
+
+  - name: node
+    entrypoint: npm
+    args: ['install', '-w', '@fstr/home']
+
+
+  - name: node
+    entrypoint: npm
     args: ['install']
 
   - name: node
