--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -8,9 +8,9 @@ steps:
     args:
     - -c
     - | 
-      npm install -verbose -w @fstr/home
+      cd web/modules/home && npm install && npm build
+      cd ../../..
       npm install
-      npm run build -w @fstr/home
 
   - name: gcr.io/fastro-319406/firebase
     args: ['deploy', '--project=fastro-319406', '--only=hosting']
