--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@fstr/monorepo",
+    "name": "@fastro/monorepo",
     "private": true,
     "version": "1.0.0",
     "workspaces": [
