--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
     "private": true,
     "version": "1.0.0",
     "workspaces": [
-        "./web/*",
-        "./web/modules/*"
+        "./web/*"
     ]
 }
