--- a/web/home/package.json
+++ b/web/home/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@craco/craco": "^6.4.0",
     "autoprefixer": "^9.8.8",
+    "msw": "^0.35.0",
     "postcss": "^7.0.39",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
